--- a/Guided Project_ Answering Business Questions using SQL/Basics.ipynb
+++ b/Guided Project_ Answering Business Questions using SQL/Basics.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Matt Purvis\n",
     "# Introduction\n",
     "\n",
     "## Answering Business Questions using SQL\n",
